Fix word-break on entry-text

--- a/src/sass/_entry.scss
+++ b/src/sass/_entry.scss
@@ -56,6 +56,7 @@
     color: $lightBlack;
     line-height: 1.4;
     padding: 0 30px 0 60px;
+    word-break: normal;
     @include breakpoint(small) {
         padding: 10px 15px 0 15px;
     }
